fixed Return button to return appropraite Edit Rental screen

--- a/BorrowTools/Views/Hire/Unavailable.cshtml
+++ b/BorrowTools/Views/Hire/Unavailable.cshtml
@@ -44,7 +44,7 @@
             @Html.DisplayFor(modelItem => item.toolAvailable)
         </td>
         <td>
-            @Html.ActionLink("Return", "Edit", new { id = item.toolID })
+            @Html.ActionLink("Return", "Hire", new { id = item.toolID })
         </td>
     }
 </tr>
